--- a/motorcycles/bmw-r45.html
+++ b/motorcycles/bmw-r45.html
@@ -5,7 +5,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>Warkot motorcycles - to historia trzech braci z pasją do motocykli starszej generacji.
+    Z pasją i zaangażowaniem realizujemy własne projekty, ale również te które zlecą nam nasi klieneci.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
@@ -23,24 +24,22 @@
 <body>
   <header role="banner">
     <div class="container">
-    <div class="row m-0 p-0">
-      <div class="col banner-logo">
-        <a href="../index.html"><img id="logo-main" src="../assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
-      </div>
+      <div class="row m-0 p-0 ">
+        <div class="col ps-3 pt-3">
+          <a href="../index.html"><img id="logo-main" class="center-logo" src="../assets/warkot_logo1.jpg" width="200" alt="warkot logo"></a>
+        </div>
 
-      <div class="col text-end header-social-media">
-        <ul class="social-network">
-          <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
-          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pt-3"></i></a></li>
-        </ul>
+        <div class="col text-end header-social-media">
+          <ul class="social-network">
+            <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
+            <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pe-2 pt-3"></i></a></li>
+        </div>
       </div>
     </div>
-  </div>
   </header>
 
   <nav class="navbar navbar-expand-md navbar-light">
     <div class="container">
-      <!-- <a class="navbar-brand" href="#">Navbar</a> -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -58,77 +57,125 @@
   <!-- content -->
   <div class="container my-5">
     <div class="row mx-3">
-      <div class="col-md-6 m-0 p-0 pop">
-        <img class="img-fluid w-100" src="../assets/motorcycles/main_bmw-r45.jpg" alt="" />
-      </div>
       <div class="col-md-6 m-0 p-0">
-        <h1 class="ps-4 pt-2">BMW R45</h1>
-        <p class="font-5 p-xl-3 p-lg-2 p-md-1 p-xs-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 1985</p>
-        <p class="font-5 p-xl-3 p-lg-2 p-md-1 p-xs-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 500CC</p>
+        <h1 class="ps-4 pt-2 ">BMW R45</h1>
+
+        <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 1985</p>
+        <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 500CC</p>
+        <div align=”justify” class="text-justify pt-4">
+          Jeden z pierwszych projektów naszego garażu. Motocykl kupiony pod niemiecką granicą,
+          gdzie czekał na wyrwanie z rąk handlarza samochodów. Inspiracją do jego budowy były
+          maszyny z francuskiego warsztatu Blitz Motorcycles. Głównym założeniem było uzyskanie
+          klasycznego wyglądu motocykli z lat 50 i 60 XX wieku. Motocykl uniwersalny i niezawodny,
+          którym można pewnie podróżować po drogach asfaltowych, ale również przemierzać szutrowe bezdroża.
+        </div>
       </div>
-      <div class="app1 col-md-6 m-0 p-0 pt-3">
+      <div class="app1 col-md-6 m-0 p-0 pt-0 ps-md-2 ps-lg-5 pb-2">
         <p>
-          <h2 class="ps-4 pt-2">SPECYFIKACJA</h2>
-          <ul>
-            <li>
-              Silnik: kompletny serwis głowic, serwis i synchronizacja gaźników, wymiana olejów i filtrów.
-            </li>
-            <li>
-              Kompletny serwis dyferencjału
-            </li>
-            <li>
-              Serwis przedniego zawieszenia
-            </li>
-            <li>
-              Serwis hamulców przednich i tylnych
-            </li>
-            <li>
-              Wymiana łożysk tocznych w elementach eksploatacyjnych
-            </li>
-          </ul>
+        <h2 class="ps-4 pt-0">SPECYFIKACJA</h2>
+        <ul>
+          <li>
+            Silnik: kompletny serwis głowic, serwis i synchronizacja gaźników, wymiana olejów i filtrów.
+          </li>
+          <li>
+            Kompletny serwis dyferencjału
+          </li>
+          <li>
+            Serwis przedniego zawieszenia
+          </li>
+          <li>
+            Serwis hamulców przednich i tylnych
+          </li>
+          <li>
+            Wymiana łożysk tocznych w elementach eksploatacyjnych
+          </li>
+        </ul>
         </p>
         <p>
-          <h2 class="ps-4 pt-2">MODYFIKACJE</h2>
-          <ul>
-            <li>
-              Czarne elementy motocykla pomalowane proszkowo
-            </li>
-            <li>
-              Lakier marrakesh Brown z palety BMW
-            </li>
-            <li>
-              Ręcznie wykonane mocowania przedniej lampy
-            </li>
-            <li>
-              Kierownica typu bobber
-            </li>
-            <li>
-              Skrócona tylna część ramy
-            </li>
-            <li>
-              Lampa przednia MZ ETZ 251
-            </li>
-            <li>
-              Opony Avon MKII
-            </li>
-            <li>
-              Kierunkowskazy typu Mini Bullet
-            </li>
-          </ul>
+        <h2 class="ps-4 pt-2">MODYFIKACJE</h2>
+        <ul>
+          <li>
+            Czarne elementy motocykla pomalowane proszkowo
+          </li>
+          <li>
+            Lakier marrakesh Brown z palety BMW
+          </li>
+          <li>
+            Ręcznie wykonane mocowania przedniej lampy
+          </li>
+          <li>
+            Kierownica typu bobber
+          </li>
+          <li>
+            Skrócona tylna część ramy
+          </li>
+          <li>
+            Lampa przednia MZ ETZ 251
+          </li>
+          <li>
+            Opony Avon MKII
+          </li>
+          <li>
+            Kierunkowskazy typu Mini Bullet
+          </li>
+        </ul>
         </p>
 
-         <p>Jeden z pierwszych projektów naszego garażu. Motocykl kupiony pod niemiecką granicą,
-            gdzie czekał na wyrwanie z rąk handlarza samochodów. Inspiracją do jego budowy były
-            maszyny z francuskiego warsztatu Blitz Motorcycles. Głównym założeniem było uzyskanie
-            klasycznego wyglądu motocykli z lat 50 i 60 XX wieku. Motocykl uniwersalny i niezawodny,
-            którym można pewnie podróżować po drogach asfaltowych, ale również przemierzać szutrowe bezdroża.
-          </p>
       </div>
-      <div class="col-md-6 float-right m-0 p-0">
+    </div>
+    <div class="row mx-md-3">
+
+      <div class="col-md-6 m-0 p-0 p-md-2 pb-2">
         <div class="pop">
-        <img class="img-fluid w-100" src="/assets/motorcycles/content_bmw-r45.jpg" alt="" />
+          <img class="img-fluid w-100" src="../assets/motorcycles/bmw_r45/bmw_r45_1.jpg" alt="bmw r45 zdjęcie nr 1" />
+        </div>
       </div>
+
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="../assets/motorcycles/bmw_r45/bmw_r45_2.jpg" alt="bmw r45 zdjęcie nr 2" />
+        </div>
       </div>
+
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="../assets/motorcycles/bmw_r45/bmw_r45_3.jpg" alt="bmw r45 zdjęcie nr 3" />
+        </div>
+      </div>
+
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="../assets/motorcycles/bmw_r45/bmw_r45_4.jpg" alt="bmw r45 zdjęcie nr 4" />
+        </div>
+      </div>
+
+
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="../assets/motorcycles/bmw_r45/bmw_r45_5.jpg" alt="bmw r45 zdjęcie nr 5" />
+        </div>
+      </div>
+
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="../assets/motorcycles/bmw_r45/bmw_r45_6.jpg" alt="bmw r45 zdjęcie nr 6" />
+        </div>
+      </div>
+
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="../assets/motorcycles/bmw_r45/bmw_r45_7.jpg" alt="bmw r45 zdjęcie nr 7" />
+        </div>
+      </div>
+
+      <div class="col-md-6 m-0 p-0">
+        <div class="col-md-12 float-right m-0 p-0 p-md-2 pb-2">
+          <div class="pop">
+            <img class="img-fluid w-100" src="../assets/motorcycles/bmw_r45/bmw_r45_8.jpg" alt="bmw r45 zdjęcie nr 8" />
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
   <!-- end of content  -->
@@ -145,33 +192,14 @@
         <li><a class="icoInstagram" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram"></i></a></li>
       </ul>
       <div id="copyright-note">
-        &copy; Copyright 2020 Kamil Tartanus
+        &copy; Copyright 2021 Kamil Tartanus
       </div>
     </div>
   </footer>
 
 
-<!--
-  <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <!-- <div class="modal-dialog modal-dialog-centered modal-xl modal-lg modal-fullscreen-md-down"> -->
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <img src="" class="imagepreview" style="width: 100%;" >
-        </div>
-      </div>
-    </div>
-  </div> -->
-
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-  <script
-  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-  integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
-  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
   <script src="../assets/script/script.js"></script>
 </body>
 
